--- a/react-ts-node-excel-form/frontend/package.json
+++ b/react-ts-node-excel-form/frontend/package.json
@@ -1,1 +1,19 @@
-{"scripts":{"dev":"vite","build":"tsc -b && vite build","preview":"vite preview --port 5173"},"dependencies":{"@types/react":"^19.2.2","@types/react-dom":"^19.2.2","react":"^19.2.0","react-dom":"^19.2.0"},"devDependencies":{"@vitejs/plugin-react":"^5.1.0","vite":"^7.1.12"}}
+{
+  "name": "react-ts-node-excel-form",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.2"
+  }
+}
